--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#61ac1c</color>
     <color name="pastel_pink">#F8C8DC</color>
+    <color name="deep_navy_blue">#FF1B1F3B</color>
 </resources>
 
