--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.FitnessTrackerSplashScreen" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/green</item>
+        <item name="windowSplashScreenBackground">@color/deep_navy_blue</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/dumbell_splash</item>
         <item name="postSplashScreenTheme">@style/Theme.FitnessTrackerAndPlanner</item>
     </style>
